Fix bottom spacing and focused search label.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .summary-cards-section {
 	padding-top: 64px;
+	padding-bottom: 10px;
 
 	.summary-card-container, .top-banner {
 		margin: 20px;
